--- a/style.css
+++ b/style.css
@@ -3,21 +3,20 @@
 body {
 	background-color: #C6BEBB;
 	margin: 0;
-	font-family: Sans Serif ,serif;
-    font font-weight: 200
-    font-size: 20px;
-    width: 100%;
-	clear: both;
-	text-align: center;
+       font-family: Sans Serif ,serif;
+       font font-weight: 200;
+       font-size: 20px;
+       width: 100%;
+       clear: both;
+       text-align: center;
 }
 /*container has to have a # selector*/
 header {
 	background-color:#114455;
 	height: 60px;
 	padding: 8px;
-    width: :60px;
+        width: :60px;
 }
-
 #nav {
     text-align: center;
     color: black;
@@ -47,15 +46,15 @@ header {
 	border-radius: 5px;
 	padding: 20px 20px 20px 20px
 	font-size: 10%;
-    font-family: sans-serif, serif;    
+        font-family: sans-serif, serif;    
 }
 h1 {
 	background-color: #C6BEBB;
-    font-family:Sans Serif ,serif;
+        font-family:Sans Serif ,serif;
 	font-size: 120px; /*this is determined with a of base of 14px*/
 	width:100%;   
-    text-decoration:underline;
-    font-weight: bold;
+        text-decoration:underline;
+        font-weight: bold;
 }			
 h1,p {
     font-size: 16px;
@@ -66,8 +65,8 @@ ul {
 	background-color: #114455;
 	font-family: Sans Serif, Serif;
 	font-size: 14px;
-    font-family: Sans Serif ,serif;
+        font-family: Sans Serif ,serif;
 	text-align: center;
-    margin:0 auto;
-    width: :10;
+        margin:0 auto;
+        width: :10;
 }
