--- a/style.css
+++ b/style.css
@@ -1,22 +1,28 @@
-/*Beginning stages of css stylesheet mirrioring vision board created*/
-
-body {
-	background-color: #C6BEBB;
-	margin: 0;
-       font-family: Sans Serif ,serif;
-       font font-weight: 200;
-       font-size: 20px;
-       width: 100%;
-       clear: both;
-       text-align: center;
+#header {
+ background-color: darkgray;
+ margin: 0;
+ padding: 5px;
+}
+#body {
+    color: darkgray;
+    margin: 5%;
+    width: 110%;
+    font-size: 20px;
+	clear: both;
+	text-align: center;
+    font-family: sans-serif, serif; 
 }
 /*container has to have a # selector*/
-header {
-	background-color:#114455;
-	height: 60px;
-	padding: 8px;
-        width: :60px;
+#wrapper {
+	background-color:chocolate;
+	padding: 20px;
+    text-align: center
 }
+.main {
+	margin: 0 0;
+	padding: 20px;
+}
+
 #nav {
     text-align: center;
     color: black;
@@ -24,49 +30,41 @@ header {
     display: block;
     list-style-type: none;
 }
-#nav ul li {
+.nav a ul li {
     list-style-type: none;
-    display: block;
-    text-decoration: none;
-    color: cornsilk;
-    font-family: sans-serif, serif; 
-    padding: 10px;
-    float: left;
-}
-#nav a {
-    display: block;
+    color: darkgrey;
+    display: inline-block;
+    padding: 10%;
     float: left;
     text-align: center;
+}
+.nav  {
     list-style-type: none;
+    display: blockn;
+    float: left;
+    text-align: center;
+    margin: 5px;
+    padding: 5px%;
+    width:100%;   
+
 }
-.main {
-	background-color: #C6BEBB;
-	font-size:100%
-	margin: 10px;
-	border-radius: 5px;
-	padding: 20px 20px 20px 20px
-	font-size: 10%;
-        font-family: sans-serif, serif;    
-}
-h1 {
-	background-color: #C6BEBB;
-        font-family:Sans Serif ,serif;
-	font-size: 120px; /*this is determined with a of base of 14px*/
-	width:100%;   
-        text-decoration:underline;
-        font-weight: bold;
+#h1 {
+	font-family:Sans Serif ,serif;
+	font-size: 120%; /*this is determined with a of base of 14px*/
+    text-decoration:underline;
+    font-weight: bold;
 }			
+
 h1,p {
     font-size: 16px;
     text-align: center;
 }
 /*need to fix this code for p in h1 */
 ul {
-	background-color: #114455;
 	font-family: Sans Serif, Serif;
 	font-size: 14px;
-        font-family: Sans Serif ,serif;
+    font-family: Sans Serif ,serif;
 	text-align: center;
-        margin:0 auto;
-        width: :10;
+    margin:0 auto;
+    width: :10;
 }
