--- a/style.css
+++ b/style.css
@@ -1,81 +1,90 @@
-/*Beginning of header section*/
-#header {
- background-color: darkgray;
- margin: 0;
- padding: 5px;
-}
-/*Ending of heading section*/
 body {
-    color: darkgray;
-    margin: 0;
+    background-image: url("backgroundi.jpg");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-attachment: fixed;
+    background-color: #744d3f;
+	margin: 0px;
+   	font-size: 20px;
     width: 100%;
-    font-size: 20px;
-    clear: both;
     text-align: center;
-    font-family: sans-serif, serif; 
+    font-family: 'Dosis', sans-serif;
+    color: #ffffff;
 }
-/*container has to have a # selector*/
-#wrapper {
-	background-color:chocolate;
-	padding: 20px;
-        text-align: center
-}
-.main {
-	padding: 20px;
-}
-/*nav section*/
-.navhorz {
-    background-color: darkgray;
-}
-.navhorz li{
-    display: block;
-    padding: 12px;
-    font-size: 12px;
-    color: ghostwhite;
-    text-decoration: none;
-    float: left;
-}
-.navhorz ul li {
-    float: left;
-}
-.navhorz ul {
+#nav{
+    text-align: center;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    width: 100%;
+	margin: 0 0 3em 0;
+	padding: 10%;
+    font-family: 'Dosis', sans-serif;
+}	
+nav ul {
+    list-style-type: none;
+    cursor: pointer;
+    color: #ffffff;
+    margin: 0px;
+    padding: 0px;
+    display: inline-block;
+    font-family: 'Dosis', sans-serif;
 }
-.navhorz ul li a {    
-    display: block;
-    padding: 12px;
-    font-size: 12px;
-    color: ghostwhite;
-    text-decoration: none;
-    font-weight: 600;
+nav li {
+    float: left;
 }
-.navhorz ul li a:hover {
-    background-color: sandybrown;
-    color:floralwhite;
-/*end of navaigation sect*/
+nav ul li:hover{
+    background: orange;
 }
-/*Body and paragraph section*/
-#h1 {
-     font-family:Sans Serif ,serif;
-     font-size: 120%; /*this is determined with a of base of 14px*/
-     text-decoration:underline;
-     font-weight: bold;
-}			
-h1,p {
-    font-size: 16px;
+nav ul li a {
     text-align: center;
+    display:inline-block;
+    list-style-type: none;
+    cursor: pointer;
+    color: white;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    font-family: 'Dosis', sans-serif;
 }
-/*End of Body and Paragpraph section*/
-/*List and upcoming events for paragrahs*/
-ul {
-      font-family: Sans Serif, Serif;
-      font-size: 14px;
-      font-family: Sans Serif ,serif;
-      text-align: center;
-      margin:0 auto;
-      width: :10;
+header{
+    font-family: 'Freckle Face', cursive;    
+    font-size: 18px;
+    text-decoration: underline;
+    color: #ffffff;
+    border-color: #ffffff;
+    border-style: groove;
+    padding: 0px;
+    border-width: thick;
 }
-/*end of list and upcoming events for paragraph sectin*/
+h1 {
+    font-family: 'Dosis', sans-serif;
+    font-size: 20px; 
+	width:100%;
+	text-align: center;
+    text-decoration: underline;
+    color: #ffffff;
+}
+.maininf {
+	background-color: #C6BEBB;
+	font-family: 'Dosis', sans-serif;
+    margin: 10px;
+	border-radius: 5px;
+	padding: 20px 20px 20px 20px;
+    font-size: 20px;
+    color: #ffffff;
+}
+mcainfo {
+    font-family: 'Dosis', sans-serif;
+    font-size: 20px;
+    margin: 10px;
+    color: #ffffff;
+}
+moreinf {
+    color: #ffffff;
+    font-family: 'Dosis', sans-serif;
+}
+footer {
+    text-align: left;
+    font-family: 'Dosis', sans-serif;
+    font-size: 12px;
+    color: #ffffff;
+}
